--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,12 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/js/bootstrap.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+
+    <link rel="stylesheet" href="/css/dropzone.min.css">
+    <link rel="stylesheet" href="/css/uploader.css">
+    <link rel="stylesheet" href="/css/filepicker.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>neal-react - Declarative landing pages for react.js</title>
+    <title>SJC SPA nealjs trial</title>
   </head>
   <body>
     <main id="main"/>
